Completed ngIf Practice exercise

--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -4,6 +4,7 @@
         <li *ngFor = 'let chore of chores'>{{chore}}</li>
     </ul>
 </div>
+<p *ngIf = "chores.length > finishedChores.length">Work harder!</p>
 <hr>
 <div class="doneChores">
     <h3>Done Chores</h3>
@@ -11,4 +12,13 @@
         <li *ngFor = 'let done of finishedChores'>{{done}}</li>
     </ul>
 </div>
+<img *ngIf = "(chores.length <= 0) || ((finishedChores.length - chores.length) >= 3); else noAllowance" src = "{{targetImage}}" alt = "Picture not found!">
+<ng-template #noAllowance>
+    <p>No allowance yet.</p>
+</ng-template>
 <hr>
+<h1 *ngIf = "(chores.length <= 0) && (finishedChores.length >= 4); else rulesForTreat">Ice cream treat!</h1>
+<ng-template #rulesForTreat>
+    <h3>To earn an ice cream treat:</h3>
+    <p>Chores list must be empty AND the Done list must have at least 4 items. </p>
+</ng-template>
